tests/integration/pilot/test_artifacts/pilot-058a94968f114a619ba739812/TestTraffic/virtualservice/rewrite_authority/tproxy/to_tproxy/_test_context/VirtualService.786299984.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: default
  namespace: echo-2-98059
spec:
  hosts:
  - tproxy
  http:
  - match:
    - uri:
        exact: /foo
    rewrite:
      authority: new-authority
    route:
    - destination:
        host: tproxy
